--- a/pgups/templates/pgups/final_print.html
+++ b/pgups/templates/pgups/final_print.html
@@ -9,24 +9,26 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" media="all" href="{% static 'css/print.css' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> <!-- jQuery core -->
+	<script src="{% static 'js/jquery-ui.min.js' %}"></script> <!-- jQueryUI -->
 	<title> Итоговые протоколы {{competition.name}}</title>
 
 </head>
 <body>
-<h2>Результаты соревнований: {{competition.name}}</h2>
-<br>
-<br>
-<div>
+<div id="results_div">
+<table>
+	<tr><td>
+        <h2>Результаты соревнований: {{competition.name}}</h2>
+	</td></tr>
 
 	{% for t in res %}
 
-	<h2>{{t.0.name}}</h2>
+	<tr><td><h2>{{t.0.name}}</h2></td></tr>
 
         {% if not t.2 %}
 
 		{% for tuple in t.1 %}
 
-			<div class="div-table">
 				<table>
 					<col class="col0">
 					<col class="col1">
@@ -70,7 +72,6 @@
 					</tr>
 						{% endfor %}
 				</table>
-			</div>
 
 		{% endfor %}
 
@@ -78,7 +79,6 @@
 
         {% if t.2 %}
 
-			<div class="div-table">
 				<table>
 					<col class="col0">
 					<col class="col1">
@@ -117,17 +117,30 @@
 										Нарушение правил прохождения дистанции
 									{% endif %}
 
-
 						</b> {% endif %}</td>
 					</tr>
 						{% endfor %}
 				</table>
-			</div>
 
         {% endif %}
-
 	{% endfor %}
-	</div>
+
+	</table>
+</div>
+<br>
+
+
+<a id="link" href="#">Скачать</a>
+
+<script>
+$("a").on("click", function () {
+    var d = new Date().toISOString().slice(0, 19).replace(/-/g, "");
+    $(this).attr("href", "data:application/vnd.ms-excel,"+document.getElementById('results_div').innerHTML).attr("download", "final-" + d + ".xls");
+});
+
+</script>
+
+
 </body>
 </html>
 
