judequinn.angularjs gender before age if age_diff

--- a/pgups/templates/pgups/cdsg_print.html
+++ b/pgups/templates/pgups/cdsg_print.html
@@ -26,6 +26,7 @@
 			<table>
 
 				<col class="col0">
+				<col class="col1">
 				<col class="col2">
 				<col class="col3">
 				<col class="col4">
@@ -39,7 +40,8 @@
 				{% for competitor in tuple.1 %}
 
 				<tr>
-					<td class="position">{{ forloop.counter }}</td>
+					<td class="position">{{ forloop.counter }} </td>
+					<td class="result">{% if competitor.result%}{{competitor.result}}{% endif %}</td>
 					<td class="competitor">
 						{% if competitor.main_distance%}<span><b>{% endif %}
 							{{competitor.person.last_name|title}} {{competitor.person.first_name|title}}
