--- a/pgups/templates/pgups/userrequest.html
+++ b/pgups/templates/pgups/userrequest.html
@@ -51,6 +51,7 @@
 							{% if competitor_form.instance.main_distance%}<span><b>{% endif %}
 							{{competitor_form.instance.person.last_name|title}} {{competitor_form.instance.person.first_name|title}}
 							{% if competitor_form.instance.main_distance%}</b></span>{% endif %}
+							<a href="{% url 'regrequest' userrequest_id=userrequest.id %}/">(Редактировать)</a>
 						</td>
 						<td class="column-tour padding-15">
 							{% if competitor_form.instance.main_distance%}<span><b>{% endif %}
