judequinn.angularjs minor fixes

--- a/pgups/templates/pgups/cdsg_print.html
+++ b/pgups/templates/pgups/cdsg_print.html
@@ -33,7 +33,11 @@
 
 				<tr>
 					<th colspan="5">
-						{{tuple.0.style|capfirst}}, {{tuple.0.distance|capfirst}}, {{tuple.0.gender|capfirst}}, {{tuple.0.age|capfirst}}
+						{{tuple.0.style|capfirst}},
+						{{tuple.0.distance|capfirst}},
+						{{tuple.0.gender|capfirst}},
+						{{tuple.0.age|capfirst}}
+						{% if tuple.0.out %} (вне конкурса) {% endif %}
 					</th>
 				</tr>
 
