--- a/pgups/templates/pgups/competition_create.html
+++ b/pgups/templates/pgups/competition_create.html
@@ -335,6 +335,6 @@
 {% endblock %}
 
 {% block additionaljs %}
-	<script src="https://code.angularjs.org/1.4.9/angular-animate.min.js"></script> <!-- Angular animations -->
+	<script src="{% static 'libs/js/angular-animate.min.js' %}"></script> <!-- Angular animations -->
 	<script src="{% static 'js/create-competition-app.js' %}"></script> <!-- Competition reg App -->
 {% endblock %}
