--- a/pgups/templates/pgups/competition_team.html
+++ b/pgups/templates/pgups/competition_team.html
@@ -5,7 +5,7 @@
 
 <!-- Notie messages -->
 {% for message in messages %}
-	<script src="{% static 'js/notie.js' %}"></script>
+	<script src="{% static 'libs/notie.min.js' %}"></script>
 	<script> notie.alert(1, 'Изменения сохранены', 0.5); </script>
 {% endfor %}
 
